--- a/src/index.css
+++ b/src/index.css
@@ -406,7 +406,7 @@ a.add img {
 .moreoption {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .moreoption .navbar {
