--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Open Sans', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 
@@ -712,13 +713,14 @@ button:focus {
         position: absolute;
         left: 1000px;
         right: 0;
-        background: #fff;
+        background: transparent;
         transition: all 0.5s ease;
         border-left: none;
     }
     .showbox {
         left: 0 !important;
         transition: all 0.5s ease;
+        height: 90vh;
     }
     .msg-head h3 {
         font-size: 14px;
@@ -791,7 +793,7 @@ button:focus {
 }
 
 .message-area {
-  height: calc(100vh -  57px);
+  height: 100vh;
   background: linear-gradient(45deg, #f12711, #f5af19);
 }
 
@@ -859,17 +861,25 @@ li.sender {
   padding: 10px;
   border-radius: 20px;
   border: 2px solid #000;
-  height: 80vh !important;
+  height: 70vh !important;
 }
 
 .sendButton {
   background: rgb(32, 32, 32);
 }
 
-.navbar-brand img {
-  width: 50%;
+.navbar-brand {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
-#root > div > div > section > div > div > div > div > p {
+.navbar-brand img {
+  width: 12%;
+}
+
+.footerText {
   margin-top: 10px;
+  text-align: center;
+  padding: 10px;
 }
